--- a/products/oeapi/branches/cvs/plugin/lib/oeapiplugin.vcproj
+++ b/products/oeapi/branches/cvs/plugin/lib/oeapiplugin.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="oeapiplugin"
 	ProjectGUID="{00907C49-617B-4736-85EC-B12D4A7AD74E}"
 	RootNamespace="oeapiplugin"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
